Адекватная обработка ошибки no
